// Vitest Snapshot v1

exports[`vue/FormStep > renders correctly - active step 1`] = `
<div
  class="gincko__step success step active"
  id="step__0"
>
  <div
    class="gincko__step__fields"
  />
</div>
`;

exports[`vue/FormStep > renders correctly - inactive step 1`] = `
<div
  class="gincko__step success step"
  id="step__0"
>
  <div
    class="gincko__step__fields"
  />
</div>
`;
